[package]
name = "x0rs"
version = "0.0.0"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
http = "0.2"
isahc = { version = "1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
smol = "1"
wiremock = "0.4"